# casparcg-server

src/: CMakeLists.txt
src/CMakeModules/: Bootstrap_Linux.cmake  Bootstrap_Mac.cmake  Bootstrap_Windows.cmake  FindFFmpeg.cmake
src/accelerator/: CMakeLists.txt  accelerator.cpp
src/accelerator/ogl/image/: image_mixer.cpp  image_mixer.h
src/accelerator/ogl/util/: device.cpp  device.h
src/accelerator/vulkan/image/: image_kernel.cpp  image_kernel.h  image_mixer.cpp  image_mixer.h  image_shader.cpp  image_shader.h
src/accelerator/vulkan/util/: buffer.cpp  buffer.h  context.h  context_egl.cpp  context_sfml.cpp  device.cpp  device.h  matrix.cpp  matrix.h  shader.cpp  shader.h  texture.cpp  texture.h  transforms.cpp
src/common/: CMakeLists.txt  memshfl.h
src/common/os/linux/: thread.cpp
src/core/: CMakeLists.txt
src/core/consumer/: frame_consumer.h  frame_consumer_registry.cpp  output.cpp  output.h
src/core/diagnostics/: osd_graph.cpp
src/core/frame/: frame.cpp  frame.h
src/core/mixer/: mixer.cpp
src/core/mixer/image/: image_mixer.h
src/modules/: CMakeLists.txt
src/modules/decklink/: decklink_api.h
src/modules/decklink/consumer/: decklink_consumer.cpp  frame.cpp  frame_factory_sdr_bgra.cpp  hdr_v210_strategy.cpp  v210_strategies.cpp
src/modules/ffmpeg/util/: audio_resampler.cpp
src/modules/html/producer/: html_producer.cpp
src/modules/screen/: CMakeLists.txt
src/modules/screen/consumer/: screen_consumer.cpp
src/shell/: CMakeLists.txt  macos_specific.cpp
